<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="preview_label">Preview</string>
    <string name="action_create">Create</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete">Delete</string>
    <string name="action_reset">Reset</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_lock">Lock</string>
    <string name="action_apply">Apply</string>
    <string name="action_customize">Customize</string>
    <string name="always_choice">Always</string>
    <string name="never_choice">Never</string>
    <string name="clipboard">Clipboard</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_done">Done</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="inverse_selection">Inverse selection</string>
    <string name="loading">Loading…</string>
    <string name="dismiss">Dismiss</string>
    <string name="download_update">Download update</string>
    <string name="install_update">Install update</string>
    <string name="view_changes">View changes</string>
    <string name="pro_updated">You\'re up-to-date!</string>
    <string name="changes_dialog_title">Updates</string>
    <string name="changes_dialog_error">Failed to load changes</string>
    <string name="changes_dialog_no_changes">No changes found</string>
    <string name="changes_dialog_build_format">Build #%1$d → #%2$d</string>
    <string name="changes_dialog_commit_info">by %1$s • %2$s • %3$s</string>
    <string name="time_just_now">just now</string>
    <string name="time_minutes_ago">%dm</string>
    <string name="time_hours_ago">%dh</string>
    <string name="time_days_ago">%dd</string>
    <string name="time_weeks_ago">%dw</string>
    <string name="time_months_ago">%dmo</string>
    <string name="time_years_ago">%dy</string>
    <string name="managed_by_lawnchair">Managed by Lawnchair</string>
    <string name="smartspace_preferences">Preferences</string>
    <string name="settings_button_text">Home settings</string>
    <string name="system_settings">System settings</string>
    <string name="title_change_settings">Change settings</string>
    <string name="others_category_label">Others</string>
    <string name="dynamic">Dynamic</string>
    <string name="presets">Presets</string>
    <string name="custom">Custom</string>
    <string name="feed_default">Default</string>
    <string name="system">System</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="label">Label</string>
    <string name="icons">Icons</string>
    <string name="grid">Grid</string>
    <string name="layout">Layout</string>
    <string name="show_wallpaper">Show wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="style">Style</string>
    <string name="background_opacity">Background opacity</string>
    <string name="pref_all_apps_search_bar_background">Separated Search bar background</string>
    <string name="copied_toast">Copied to clipboard</string>
    <string name="calculator_search_result_copied_toast">Result copied to clipboard</string>
    <string name="item_removed">Item removed</string>
    <string name="google_folder_title" translatable="false">Google</string>
    <string name="what_to_show">What to show</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="caddy_beta">Caddy (Beta)</string>
    <string name="caddy">Caddy</string>
    <string name="app_drawer_folder">App drawer folders</string>
    <string name="selected_apps">Selected apps</string>
    <string name="add_apps">Add apps</string>
    <string name="app_drawer_folder_settings">Drawer folder</string>
    <string name="add_folder">Create folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="add_label">Add</string>
    <string name="edit_label">Edit</string>
    <string name="apply_label">Apply</string>
    <string name="delete_label">Delete</string>
    <string name="folder_list_note">Swipe left to edit, swipe right to delete, or tap to update items</string>
    <string name="apps_in_folder_label">Hide folder apps</string>
    <string name="apps_in_folder_description">Apps assigned to folders are excluded from app lists</string>
    <string name="folders_filter_duplicates">Only show unique apps</string>
    <string name="my_folder_label">My folder</string>
    <string name="accessibility_service_description">To perform certain actions (such as locking your phone) when performing a gesture, Lawnchair requires accessibility access.\n\nLawnchair doesn\'t watch any user action, though the privilege to do so is required for all accessibility services. Lawnchair discards any event sent by the system.\n\nIn order to lock your phone, or to open the Recents screen, Lawnchair uses the performGlobalAction Accessibility service.</string>
    <string name="iconPackPackageDefault" translatable="false">""</string>
    <string name="n_percent" translatable="false">%1$d%%</string>
    <string name="x_with_y_count">%1$s (%2$d)</string>
    <string name="x_by_y">%1$d x %2$d</string>
    <string name="x_and_y">%1$s &amp; %2$s</string>
    <string name="advanced">Advanced</string>
    <string name="reorderable_active_items">Active items</string>
    <string name="reorderable_disabled_items">Other items</string>
    <string name="reorderable_disabled_hint">Disabled items will appear here. Drag an item here or tap the remove button to make an item active.</string>
    <string name="reorderable_add_hint_items">Active items will appear here. Drag an item here or tap the add button to make an item active.</string>
    <string name="walk_settings">Settings</string>
    <string name="general_label">General</string>
    <string name="general_description">Colors, icon packs, notification dots</string>
    <string name="home_screen_label">Home screen</string>
    <string name="home_screen_description">Feed, grid, icons</string>
    <string name="home_screen_actions">Home screen actions</string>
    <string name="dock_label">Dock</string>
    <string name="dock_description">Search bar, icon count</string>
    <string name="app_drawer_label">App drawer</string>
    <string name="app_drawer_description">Hidden apps, column count, icons</string>
    <string name="drawer_search_label">Drawer search</string>
    <string name="drawer_search_description">Web suggestions, global search</string>
    <string name="folders_label">Folders</string>
    <string name="folders_description">Row and column count</string>
    <string name="gestures_label">Gestures</string>
    <string name="gestures_description">Taps and swipes</string>
    <string name="quickstep_label">Recents screen</string>
    <string name="quickstep_description">Clear All button, corner radius</string>
    <string name="about_label">About</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="debug_restart_launcher">Restart Lawnchair</string>
    <string name="experimental_features_label">Experimental features</string>
    <string name="font_picker_label">Font customization</string>
    <string name="font_picker_description">Some text remains unchanged</string>
    <string name="smartspace_calendar_label">At a Glance calendar customization</string>
    <string name="smartspace_calendar_description">Allow showing date in non-Gregorian calendar systems</string>
    <string name="workspace_increase_max_grid_size_label">Increase maximum grid size limit</string>
    <string name="workspace_increase_max_grid_size_description">Increase maximum allowed home screen grid size from 10 x 10 to 20 x 20</string>
    <string name="always_reload_icons_label">Always reload icons</string>
    <string name="always_reload_icons_description">Avoid using cached icons from icon packs</string>
    <string name="icon_swipe_gestures">Icon swipe gestures</string>
    <string name="icon_swipe_gestures_description">Perform actions when swiping left or right on icons instead of moving the home screen</string>
    <string name="show_deck_layout">Deck layout</string>
    <string name="show_deck_layout_description">Show a layout option to hide the app drawer and automatically add new apps to the home screen</string>
    <string name="recents_lock_unlock">Lock/unlock</string>
    <string name="recents_lock_unlock_description">Prevent selected app from closing when pressing \"Clear all\"</string>
    <string name="overlay_fade_in">Fade In</string>
    <string name="overlay_suck_in">Suck In</string>
    <string name="app_closing_animation">App closing animation</string>
    <string name="overlay_label">Overlay</string>
    <string name="overlay_none">None</string>
    <string name="set_default_launcher_tip">To access shortcuts and additional features, set Lawnchair as your default launcher</string>
    <string name="notification_dots">Notification dots</string>
    <string name="show_notification_count">Show notification counter</string>
    <string name="notification_dots_color">Notification dot color</string>
    <string name="notification_dots_text_color">Notification counter color</string>
    <string name="notification_dots_color_contrast_warning_always">Warning: Notification dot and counter colors don\'t have enough contrast with each other</string>
    <string name="notification_dots_color_contrast_warning_sometimes">Warning: Notification dot and counter colors might not always have enough contrast with each other</string>
    <string name="icon_style_label">Icon style</string>
    <string name="icon_shape_label">Icon shape</string>
    <string name="icon_sizes">Icon size</string>
    <string name="show_labels">Show labels</string>
    <string name="label_size">Label size</string>
    <string name="twoline_label">Use multiple lines</string>
    <string name="transparent_background_icons_label">Transparent themed icons</string>
    <string name="transparent_background_icons_description">Use transparent background on themed icons</string>
    <string name="app_name"> Walk Win Cash</string>
    <string name="steps">steps</string>
    <string name="trends_title">Activity Trends</string>
    <string name="tab_daily">Day</string>
    <string name="tab_weekly">Week</string>
    <string name="tab_monthly">Month</string>
    <string name="best_day">Best Day</string>
    <string name="km">km</string>
    <string name="kcal">kcal</string>
    <string name="no_data_available">No data available</string>
    <string name="sample_date">Tue, Mar 4</string>
    <string name="sample_steps">2.2K</string>
    <string name="sample_distance">1.6</string>
    <string name="sample_calories">85</string>
    <string name="sample_best_steps">2.2K</string>
    <string name="sample_best_distance">1.6</string>
    <string name="sample_best_calories">85</string>
    <string name="permission_request_title">Lock Screen Display</string>
    <string name="permission_request_description">Allow %1$s to display on lock screen to provide better step tracking experience</string>
    <string name="permission_icon_description">Lock screen permission icon</string>
    <string name="btn_grant_permission">Grant Permission</string>
    <string name="btn_skip_permission">Skip for Now</string>
    <string name="withdrawal_record_order_sample">Order: 12345678</string>
    <string name="withdrawal_record_status_success_sample">Redeemed successfully</string>
    <string name="withdrawal_record_amount_sample">$30.00</string>
    <string name="withdrawal_record_coins_sample">3000 Coins</string>
    <string name="withdrawal_record_commission_sample">Fee: $3.00 (300 Coins)</string>
    <string name="withdrawal_record_create_time_sample">2023-05-20 14:30</string>
</resources>